--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
